--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Delivery service",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node ./src/start",
+    "start": "node ./src",
     "start:dev": "nodemon ./src",
     "test": "nodemon ./src/test.js",
     "dropdb": "node ./src/dropTables.js"
@@ -31,6 +31,7 @@
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3"
   }
 }
